@@ -1,3 +1,13 @@
+Wed Nov  4 11:50:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ccm/ComponentServer/CCM_ComponentServer.mpc:
+          Reduced the number of source files generates, generate
+          export files
+
+        * ccm/ComponentServer/DAnCE_ComponentServer_stub_export.h:
+        * ccm/ComponentServer/DAnCE_ComponentServer_svnt_export.h:
+          Removed, will be generated by TAO_IDL from now
+
 Wed Nov  4 11:30:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/ComponentServer/CIAO_ComponentInstallation_Impl.h
